<resources>
    <string name="app_name">COGU</string>
    <string name="indication_sign"> "-$$$-" </string>
    <string name="send">Send</string>
    <string name="system_activity_head">System</string>
    <string name="channels_list">Channels</string>
    <string name="signin_option">Already User? Sign in</string>
    <string-array name="commands">
        <item>notify-send </item>
        <item>systemctl suspend</item>
        <item>unlock</item>
        <item>shutdown now</item>
        <item>culprit</item>
        <item>super unlock</item>
        <item>iot echo</item>
        <item>iot list</item>
        <item>ss</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_app_name">Welcome to COGU</string>
    <string name="Login">Account Login</string>
</resources>